--- a/Game/Properties/Resources.resx
+++ b/Game/Properties/Resources.resx
@@ -121,4 +121,13 @@
   <data name="action" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\action.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="luftbalong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\luftbalong.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="luftbalong1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\luftbalong1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Skystart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Skystart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
