--- a/Game/Properties/Resources.resx
+++ b/Game/Properties/Resources.resx
@@ -145,4 +145,7 @@
   <data name="Dturkis1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Dturkis1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gatherGemSound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gatherGemSound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
