--- a/Game/Properties/Resources.resx
+++ b/Game/Properties/Resources.resx
@@ -148,4 +148,7 @@
   <data name="gatherGemSound" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gatherGemSound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="game_over" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\game_over.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
